--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3656,7 +3656,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCuqTqok1m {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCurmDdit5 {
   padding-top: 15px;
@@ -5565,7 +5565,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCA0xjRgfg {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCA0xjRgfg H1 {
   text-align: center;
@@ -6890,7 +6890,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCCSEU8Lm8 {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCCV9JdIBd {
   padding-top: 15px;
@@ -9201,7 +9201,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCFn8e2LwD {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background43.jpg");
 }
 .cid-rCFnGeprjX {
   padding-top: 15px;
@@ -9445,24 +9445,24 @@ body {
 .cid-rCFuT7Uhbs blockquote {
   color: #767676;
 }
-.cid-rCIDE19SK5 {
+.cid-rCIEh4z5Zk {
   background: #ffffff;
   padding-top: 0px;
   padding-bottom: 15px;
 }
-.cid-rCIDE19SK5 .image-block {
+.cid-rCIEh4z5Zk .image-block {
   margin: auto;
 }
-.cid-rCIDE19SK5 figcaption {
+.cid-rCIEh4z5Zk figcaption {
   position: relative;
 }
-.cid-rCIDE19SK5 figcaption div {
+.cid-rCIEh4z5Zk figcaption div {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-rCIDE19SK5 .image-block {
+  .cid-rCIEh4z5Zk .image-block {
     width: 100% !important;
   }
 }
